tests/golden/compile-pass/generic_struct_enum.rua
struct Wrapper<T> {
    value: T,
}

enum Either<L, R> {
    Left(L),
    Right(R),
}

fn main() {}
