tests/golden/compile-fail/trait_unknown_bound.rua
fn inspect<T: MissingTrait>(value: T) {}
